--- a/spring.css
+++ b/spring.css
@@ -938,6 +938,8 @@ a img {
 /* 2. Displacement Animation */
 @keyframes bounce-code {
   0%, 100% {
+    width: 100%;
+    height: 100%;
     transform: translate(0, 0);
   }
   50% {
