Added interactive configuration instructions

--- a/spring.css
+++ b/spring.css
@@ -1,5 +1,19 @@
 :root {
 
+    /*********************** HTML export page configuration HTML导出页面配置 ***************************
+     **************************************************************************************************/
+    /* Font size 字体大小 */
+    --font-size: 16px;
+
+    /* Max width 最大宽度 */
+    --max-width: 1080px;
+
+    /* Margin 外边距 */
+    --margin: 0 auto;
+
+    /* Padding 内边距 */
+    --padding: 0 20px;
+
     /********************************* Text alignment 文本对齐方式 *************************************
      **************************************************************************************************
      * - left:         Align Left         左对齐 
@@ -83,13 +97,17 @@
     
     /* Table interactive effect 表格交互效果 */
     --table-hover-effect: 1;
+
+    /************************************** Color Scheme 颜色配置 **************************************
+     **************************************************************************************************/
+
 }
 
 html {
-    font-size: 16px;
-    max-width: 1080px;
-    margin: 0 auto;
-    padding: 0 20px;
+    font-size: var(--font-size);
+    max-width: var(--max-width);
+    margin: var(--margin);
+    padding: var(--padding);
 }
 
 html,
